kubernetes-manifests/observer.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: observer
  labels:
    app: observer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: observer
  namespace: observer
  labels:
    app: observer
spec:
  selector:
    matchLabels:
      app: observer
  template:
    metadata:
      labels:
        app: observer
    spec:
      containers:
        - name: server
          image: smorenburg/observer:0.0.3
          ports:
            - name: default
              containerPort: 8080
            - name: metrics
              containerPort: 9090
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: observer
  namespace: observer
#  annotations:
#    cloud.google.com/backend-config: '{"ports": {"http":"observer"}}'
  labels:
    app: observer
spec:
  type: ClusterIP
  selector:
    app: observer
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observer
  namespace: observer
#  annotations:
#    networking.gke.io/managed-certificates: observer
#    kubernetes.io/ingress.class: gce
#    networking.gke.io/v1beta1.FrontendConfig: observer
spec:
  defaultBackend:
    service:
      name: observer
      port:
        number: 80
